--- a/Index.html
+++ b/Index.html
@@ -1,5 +1,49 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+    
+    .nav ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+}
+
+.nav li {
+  float: left;
+}
+
+.nav li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+.nav li a:hover {
+  background-color: #111;
+}
+    </style>
+</head>
+<body>
+    
+</body>
+</html><html>
     <body>
+    <div class="nav">
+        <ul>
+        <li><a href="">Biodata</a></li>
+        <li><a href="Portofolio.html">Portofolio</a></li>
+        </ul>
+    </div>
+
         <h2><b> Nurul Atika </b></h2>
         <img src="nrl.jpg" alt="Nurul" width="250" height="340">
         <h3><b> About Me! </b></h3>
